{{$NEXT}}

0.0.2  2018-06-14T19:27:08Z

    - Version-from support
    - Many fixes (mostly small bugs from previous version)

0.0.1  2018-06-14T17:24:18Z

    - First release
